test/disabled/neg/abstract-report3.check
abstract-report3.scala:1: error: class Foo needs to be abstract, since:
it has 25 unimplemented members.
/** As seen from class Foo, the missing signatures are as follows.
 *  For convenience, these are usable as stub implementations.
 */
  // Members declared in java.util.concurrent.BlockingQueue
  def add(x$1: T): Boolean = ???
  def contains(x$1: Any): Boolean = ???
  def drainTo(x$1: java.util.Collection[_ >: T],x$2: Int): Int = ???
  def drainTo(x$1: java.util.Collection[_ >: T]): Int = ???
  def offer(x$1: T,x$2: Long,x$3: java.util.concurrent.TimeUnit): Boolean = ???
  def offer(x$1: T): Boolean = ???
  def poll(x$1: Long,x$2: java.util.concurrent.TimeUnit): T = ???
  def put(x$1: T): Unit = ???
  def remainingCapacity(): Int = ???
  def remove(x$1: Any): Boolean = ???
  def take(): T = ???
  
  // Members declared in java.util.Collection
  def addAll(x$1: java.util.Collection[_ <: T]): Boolean = ???
  def clear(): Unit = ???
  def containsAll(x$1: java.util.Collection[_]): Boolean = ???
  def isEmpty(): Boolean = ???
  def iterator(): java.util.Iterator[T] = ???
  def removeAll(x$1: java.util.Collection[_]): Boolean = ???
  def retainAll(x$1: java.util.Collection[_]): Boolean = ???
  def size(): Int = ???
  def toArray[T](x$1: Array[T with Object]): Array[T with Object] = ???
  def toArray(): Array[Object] = ???
  
  // Members declared in java.util.Queue
  def element(): T = ???
  def peek(): T = ???
  def poll(): T = ???
  def remove(): T = ???

class Foo[T] extends java.util.concurrent.BlockingQueue[T] { }
      ^
one error found
